<resources>
    <string name="app_name">DailyWallpaper</string>

    <!-- categories -->
    <string name="category_favorite">Favorites</string>
    <string name="category_all">All categories</string>
    <string name="category_fashion">Fashion</string>
    <string name="category_nature">Nature</string>
    <string name="category_backgrounds">Backgrounds</string>
    <string name="category_science">Science</string>
    <string name="category_education">Education</string>
    <string name="category_people">People</string>
    <string name="category_feelings">Feelings</string>
    <string name="category_religion">Religion</string>
    <string name="category_health">Health</string>
    <string name="category_places">Places</string>
    <string name="category_animals">Animals</string>
    <string name="category_industry">Industry</string>
    <string name="category_food">Food</string>
    <string name="category_computer">Computer</string>
    <string name="category_sports">Sports</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_travel">Travel</string>
    <string name="category_buildings">Buildings</string>
    <string name="category_business">Business</string>
    <string name="category_music">Music</string>

    <!-- category keys -->
    <string name="key_category_favorite" translatable="false">favorite</string>
    <string name="key_category_fashion" translatable="false">fashion</string>
    <string name="key_category_nature" translatable="false">nature</string>
    <string name="key_category_backgrounds" translatable="false">backgrounds</string>
    <string name="key_category_science" translatable="false">science</string>
    <string name="key_category_education" translatable="false">education</string>
    <string name="key_category_people" translatable="false">people</string>
    <string name="key_category_feelings" translatable="false">feelings</string>
    <string name="key_category_religion" translatable="false">religion</string>
    <string name="key_category_health" translatable="false">health</string>
    <string name="key_category_places" translatable="false">places</string>
    <string name="key_category_animals" translatable="false">animals</string>
    <string name="key_category_industry" translatable="false">industry</string>
    <string name="key_category_food" translatable="false">food</string>
    <string name="key_category_computer" translatable="false">computer</string>
    <string name="key_category_sports" translatable="false">sports</string>
    <string name="key_category_transportation" translatable="false">transportation</string>
    <string name="key_category_travel" translatable="false">travel</string>
    <string name="key_category_buildings" translatable="false">buildings</string>
    <string name="key_category_business" translatable="false">business</string>
    <string name="key_category_music" translatable="false">music</string>

    <!-- info section -->
    <string name="info_author">Author: %1$s</string>
    <string name="info_downloads">Downloads: %1$d</string>
    <string name="info_views">Views: %1$d</string>

    <!-- preferences -->
    <string name="pref_safesearch_title">SafeSearch filter</string>
    <string name="pref_safesearch_summary_on">Enabled</string>
    <string name="pref_safesearch_summary_off">Disabled</string>
    <string name="pref_safesearch_key" translatable="false">safe_search</string>

    <string name="pref_interval_title">Automatic wallpaper change</string>
    <string name="pref_interval_key" translatable="false">auto_wallpaper_interval</string>

    <string name="pref_category_title">Category for automatic wallpapers</string>
    <string name="pref_category_key" translatable="false">auto_wallpaper_category</string>

    <string name="pref_interval_label_disabled">Disabled</string>
    <string name="pref_interval_label_1h">Every 1 hour</string>
    <string name="pref_interval_label_3h">Every 3 hours</string>
    <string name="pref_interval_label_6h">Every 6 hours</string>
    <string name="pref_interval_label_12h">Every 12 hours</string>
    <string name="pref_interval_label_24h">Every 24 hours</string>

    <string name="pref_interval_value_disabled" translatable="false">0</string>
    <string name="pref_interval_value_1h" translatable="false">3600</string>
    <string name="pref_interval_value_3h" translatable="false">10800</string>
    <string name="pref_interval_value_6h" translatable="false">21600</string>
    <string name="pref_interval_value_12h" translatable="false">43200</string>
    <string name="pref_interval_value_24h" translatable="false">86400</string>


    <string name="set_as_wallpaper">Set wallpaper</string>
    <string name="setting_wallpaper">Setting wallpaper…</string>
    <string name="wallpaper_set">Wallpaper set!</string>
    <string name="error_setting_wallpaper">Error setting wallpaper!</string>

    <string name="set_as_favorite">Mark as favorite</string>
    <string name="set_as_not_favorite">Unmark as favorite</string>

    <string name="no_internet">Could not connect to the Internet.\nPlease try again later.</string>

    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="empty" translatable="false" />

    <!-- content descriptions -->
    <string name="wallpaper_content_description">wallpaper image</string>
    <string name="pixabay_logo_content_description">pixabay attribution</string>
    <string name="widget_image_content_description">change wallpaper button</string>

    <string name="image_transition_name">image</string>
</resources>
