<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_as_wallpaper"
        android:title="@string/set_as_wallpaper"
        android:showAsAction="ifRoom"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/set_as_favorite"
        android:icon="@drawable/ic_not_favorite"
        android:showAsAction="ifRoom"
        android:orderInCategory="2" />

    <item
        android:id="@+id/action_unfavorite"
        android:title="@string/set_as_not_favorite"
        android:icon="@drawable/ic_favorite"
        android:showAsAction="ifRoom"
        android:orderInCategory="2" />
</menu>